<resources>
    <string name="app_name">Sitios de interés</string>
    <string name="ir_mapas">Ir a mis mapas</string>
    <string name="title_activity_maps">Map</string>
    <string name="interes">Sitios de interés en la CDMX</string>
    <string name="bellas_artes">Palacio de Bellas Artes</string>
    <string name="zocalo">Zócalo CDMX</string>
    <string name="chapultepec">Bosque de Chapultepec</string>
    <string name="angel">Ángel de la independecia</string>
</resources>
