<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"
        android:text="@string/interes"
        android:textSize="23sp"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="70dp">

        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            card_view:cardBackgroundColor="@color/colorAccent"
            card_view:cardCornerRadius="6dp"
            card_view:cardElevation="4dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="bellasArtes">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bellas_artes"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/bellas_artes"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/colorAccent"
            card_view:cardCornerRadius="6dp"
            card_view:cardElevation="4dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="zocalo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/zocalo"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/zocalo"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            card_view:cardBackgroundColor="@color/colorAccent"
            card_view:cardCornerRadius="6dp"
            card_view:cardElevation="4dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="bosque">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/chapultepec"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/chapultepec"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/colorAccent"
            card_view:cardCornerRadius="6dp"
            card_view:cardElevation="4dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="angel">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/angel"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/angel"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>